--- a/package.json
+++ b/package.json
@@ -23,8 +23,8 @@
     "prepublish": "npm run flow.clean && npm run flow.compile",
     "postpublish": "npm run flow.deploy:gh-pages",
     "start": "npm run flow.serve:dev",
-    "pretest": "npm run flow.lint",
-    "test": "cross-env NODE_ENV=test karma start",
+    "pretest": "npm run flow.compile",
+    "test": "cross-env NODE_ENV=test karma start --debug --auto-watch",
     "test:watch": "cross-env NODE_ENV=test karma start --auto-watch --no-single-run",
     "preversion": "npm test",
     "version": "npm run flow.changelog && git add -A",
